adiciona box e posicoes

--- a/1_modulo/3_bloco/index.html
+++ b/1_modulo/3_bloco/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <img src="/image/foto perfil.jpg" alt="foto do Gustavo" width="150">
-        <h1>Gustavo Tonon Vono</h1>
+    <h1>
+            Gustavo Tonon Vono
+    </h1>
         <p class="description">
             "Bacharel em Educação Física | Estudando desenvolvimento web na Trybe"
         </p>
-        <br>
+    <br>
+    <div class="aboutme">
         <h2>Sobre mim</h2>
     
 <br>
@@ -21,13 +24,16 @@
             Nascido em Jaú-SP, Brasil, gosta de musculação e música, por isso buscou a formação em educação física, pois podia juntar ambos no ambiente de trabalho. <br>
             Hoje não se identifica mais tanto com a área em que se encontra, por isso está buscando novos ares na Trybe. PS: o pai foi DJ também, então a música está no sangue.
         </p>
-<br>
+    </div>
+
+        <br>
     <ul>
         <li>DJ</li>
         <li>Personal</li>
         <li>Entendimento básico sobre investimentos</li>
         <li>Apaixonado por jogos, músicas e filmes</li>
     </ul>
+
 <br>
 </body>
 </html>
