adicionando tudo que estava para trás

--- a/1_modulo/6_bloco/conteudo/6.3/index.html
+++ b/1_modulo/6_bloco/conteudo/6.3/index.html
@@ -20,22 +20,22 @@
         background-color: #0fa36b;
         display: flex;
 
-        /* modifica main */
+        /* modifica eixo principal (row ou column) */
         /* flex-direction: ; */
 
         /* modifica quebra de linha */
-        flex-wrap: wrap ;
+        /* flex-wrap: wrap ; */
 
         /* junção dos 2 acima */
         /* flex-flow: ; */
 
         /* alinha itens no eixo main */
-        justify-content: space-evenly;
+        /* justify-content: space-evenly; */
 
         /* alinha no eixo cross */
         /* align-items:flex-end; */
 
-        /* alinha as linhas no eixo cross */
+        /* alinha varias linhas no eixo cross */
         /* align-content: center; */
       }
     </style>
